--- a/Proyecto/indexConMultimedia.html
+++ b/Proyecto/indexConMultimedia.html
@@ -43,7 +43,7 @@
         <main class="main">
             <section class="principal">
                 <h1 class="noMostrar"> Portada</h1>
-                <svg height="130" width="500">
+                <svg height="130" width="500" class="svg">
                     <defs>
                         <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                             <stop offset="20%" style="stop-color:rgb(255, 0, 55);stop-opacity:1" />
