--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="proyecto/indexConMultimedia.html">Index normal</a>
-    <a href="Proyecto_AAA/indexConMultimedia.html">Index AAA</a>
+    <p> <a href="proyecto/indexConMultimedia.html">Index normal</a> </p> 
+    <p> <a href="Proyecto_AAA/indexConMultimedia.html">Index AAA</a> </p>
 </body>
 </html>
