--- a/Proyecto_AAA/indexConMultimedia.html
+++ b/Proyecto_AAA/indexConMultimedia.html
@@ -34,8 +34,7 @@
             <li class="textoMenu"><span class="textoMenuGirado"><a href="noticias-blog.html">Blog</a></span></li>
             <li class="textoMenu"><span class="textoMenuGirado"><a href="contacto.html">Contacto</a></span></li>
             <li class="textoMenu"><span class="textoMenuGirado"><a href="mapaWeb.html">Mapa de la Web</a></span></li>
-            <li class="textoMenu"><span class="textoMenuGirado"><img class="imgcompartir"
-                        src="img/compartir.png"></span></li>
+            <li class="textoMenu"><span class="textoMenuGirado"><img class="imgcompartir" src="img/compartir.png" alt="Logo de compartir"></span></li>
         </ul>
     </nav>
 
