--- a/Proyecto_AAA/indexConMultimedia.html
+++ b/Proyecto_AAA/indexConMultimedia.html
@@ -130,11 +130,11 @@
                         </div>
                         <div class="fila-trabajos">
                             <div class="trabajos-i">
-                                <img src="img/ico1.png" alt="icono de los trabajos">
+                                <img src="img/ico1.PNG" alt="icono de los trabajos">
                                 <p> 129 Proyectos Completos</p>
                             </div>
                             <div class="trabajos-p">
-                                <img src="img/ico2.png" alt="icono de los trabajos">
+                                <img src="img/ico2.PNG" alt="icono de los trabajos">
                                 <p>1000 Tazas de café</p>
                             </div>
                             <div class="trabajos-i">
