--- a/Proyecto_AAA/indexConMultimedia.html
+++ b/Proyecto_AAA/indexConMultimedia.html
@@ -138,19 +138,19 @@
                                 <p>1000 Tazas de café</p>
                             </div>
                             <div class="trabajos-i">
-                                <img src="img/ico3.png" alt="icono de los trabajos">
+                                <img src="img/ico3.PNG" alt="icono de los trabajos">
                                 <p>400 Clientes satisfechos</p>
                             </div>
                             <div class="trabajos-p">
-                                <img src="img/ico4.png" alt="icono de los trabajos">
+                                <img src="img/ico4.PNG" alt="icono de los trabajos">
                                 <p>8 Años de experiencia</p>
                             </div>
                             <div class="trabajos-i">
-                                <img src="img/ico5.png" alt="icono de los trabajos">
+                                <img src="img/ico5.PNG" alt="icono de los trabajos">
                                 <p>+15 premios ganados</p>
                             </div>
                             <div class="trabajos-p">
-                                <img src="img/ico6.png" alt="icono de los trabajos">
+                                <img src="img/ico6.PNG" alt="icono de los trabajos">
                                 <p>2000 lineas de codigo</p>
                             </div>
                         </div>
