--- a/Usabilidad/indexConMultimedia.html
+++ b/Usabilidad/indexConMultimedia.html
@@ -129,27 +129,27 @@
                         </div>
                         <div class="fila-trabajos">
                             <div class="trabajos-i">
-                                <img src="img/ico1.png" alt="icono de los trabajos">
+                                <img src="img/ico1.PNG" alt="icono de los trabajos">
                                 <p> 129 Proyectos Completos</p>
                             </div>
                             <div class="trabajos-p">
-                                <img src="img/ico2.png" alt="icono de los trabajos">
+                                <img src="img/ico2.PNG" alt="icono de los trabajos">
                                 <p>1000 Tazas de café</p>
                             </div>
                             <div class="trabajos-i">
-                                <img src="img/ico3.png" alt="icono de los trabajos">
+                                <img src="img/ico3.PNG" alt="icono de los trabajos">
                                 <p>400 Clientes satisfechos</p>
                             </div>
                             <div class="trabajos-p">
-                                <img src="img/ico4.png" alt="icono de los trabajos">
+                                <img src="img/ico4.PNG" alt="icono de los trabajos">
                                 <p>8 Años de experiencia</p>
                             </div>
                             <div class="trabajos-i">
-                                <img src="img/ico5.png" alt="icono de los trabajos">
+                                <img src="img/ico5.PNG" alt="icono de los trabajos">
                                 <p>+15 premios ganados</p>
                             </div>
                             <div class="trabajos-p">
-                                <img src="img/ico6.png" alt="icono de los trabajos">
+                                <img src="img/ico6.PNG" alt="icono de los trabajos">
                                 <p>2000 lineas de codigo</p>
                             </div>
                         </div>
