--- a/Proyecto_AAA/indexConMultimedia.html
+++ b/Proyecto_AAA/indexConMultimedia.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="menu">
 
-        <img src="img/logo.PNG" alt="logo alternativo de la web" class="boton-Menu">
+        <img src="img/logo.png" alt="logo alternativo de la web" class="boton-Menu">
         <ul>
             <li class="textoMenu"><span class="textoMenuGirado"><a href="index.html">Inicio</a></span></li>
             <li class="textoMenu"><span class="textoMenuGirado"><a href="infoPersonal.html">Sobre mi</a></span></li>
@@ -45,9 +45,9 @@
                 </svg>
                 <section class="redes">
                     <h1 class="noMostrar"> Seccion de enlaces</h1>
-                    <img src="img/fb-icon.PNG" alt="logo de facebook" class="logos">
-                    <img src="img/tw-icon.PNG" alt="logo de twitter" class="logos">
-                    <img src="img/ig-icon.PNG" alt="logo de instagram" class="logos">
+                    <img src="img/fb-icon.png" alt="logo de facebook" class="logos">
+                    <img src="img/tw-icon.png" alt="logo de twitter" class="logos">
+                    <img src="img/ig-icon.png" alt="logo de instagram" class="logos">
                     <a href="#contenedor-sobre-mi">Ir al contenido</a>
                 </section>
                 <section class="banner">
